# anki-plugin-new-card

./: .gitignore  README.md  __init__.py  pyproject.toml
